Job @ TwinCap (Zürich): IT Project Manager | JOIN. Wirecard Asia - Jobs: Project Manager, Professional Services (Sales) - Apply online. Wirecard Asia - Jobs: Project Manager, Banking Solutions - Apply online. Wirecard Asia - Jobs: Senior Project Manager - Apply online. Wirecard Asia - Jobs: Enterprise Program Manager - Apply online. Wirecard Asia - Jobs: Project Manager - Apply online. Wirecard Asia - Jobs: Project Manager - Apply online. VAM Systems Project Manager | SmartRecruiters. Bey IT Project Manager (Digital eCommerce) | SmartRecruiters. 4Catalyzer Clinical Program Manager, Deep Learning | SmartRecruiters. Broadridge Project Manager - Financial Systems (REF2737D) | SmartRecruiters. Computer Consultants International, Inc. Program Manager/Engagement Manager 2 (PREM2) (IV&V/HIPAA/MMI/Medicaid) (Job ID: 602779) | SmartRecruiters. Shorelight Education Careers - Auburn Global – Career Accelerator Program Manager. Bond Brand Loyalty Careers - Customer Experience Project Manager.     Technical Program Manager at Unbxd Inc . SEIU 775 Benefits Group Sr. Project Manager | SmartRecruiters. Cirrus Logic Careers - Silicon Development Program Manager. DDB Careers - Project Manager. Carta - Technical Program Manager, Liquidity. Finix - Project Manager. Looker - Project Manager, Enterprise Programs. Looker - Program Manager, Enterprise Programs. Seeka Technology IT Project Manager (RM4000 per month)( Mid-Senior Level) | SmartRecruiters. Seeka Technology Data Entry Project Manager (RM2500 per month) (Mid-Senior Level) | SmartRecruiters.     Product Development Project Manager at Columbia Care . Project Manager Media Monitoring (w/m/d). Zeta Global Careers - Technical Project Manager. Dynacare Careers - Program Manager - Customer Relations. Santander Consumer USA Careers - Associate Project Manager. Tyro - Payments Project Manager - Fixed Term 12 mos. Ajna Infotech IT Project Manager (eCommerce) | SmartRecruiters. Sr Project Manager / Associate Director - Oncology Adoptive Ce

--- a/project-manager.html
+++ b/project-manager.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/BC3A2C8315'>Wirecard Asia - Jobs: Enterprise Program Manager - Apply online</a></h5> 
+<h5><a href='https://wirecard-asia-holding-pte-ltd.workable.com/j/BC3A2C8315'>Wirecard Asia - Jobs: Enterprise Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -138,7 +138,7 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://colcare.recruiterbox.com/jobs/fk031p5'>
+<h5><a href='http://colcare.recruiterbox.com/jobs/fk031p5'>
     Product Development Project Manager at Columbia Care
 </a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
@@ -172,7 +172,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/senior-project-manager-project-manager-respiratory-vaccines-team-us-homebased-3489'>Senior Project Manager / Project Manager - Respiratory Vaccines Team (US Homebased) - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/senior-project-manager-project-manager-respiratory-vaccines-team-us-homebased-3489'>Senior Project Manager / Project Manager - Respiratory Vaccines Team (US Homebased) - PPD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -222,6 +222,17 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
+<h5><a href='https://thalle.recruiterbox.com/jobs/fk031qj/'>Project Manager -Heavy Civil Construction at Thalle Construction ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... SEEKING PROJECT MANAGER FOR HEAVY CIVIL PROJECT(S). Thalle 
+Construction Company (Thalle), established in 1947, is a family-owned, privately-
+held,?...</p>
+<hr/>
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03flz?apply=true'>Construction Project Manager - Scotland at OYO</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Construction Project Manager - Scotland. Ayr, Scotland, United Kingdom Full-
+time. loading Fetching your Linkedin profile .</p>
+<hr/>
 <h5><a href='https://tetratech.referrals.selectminds.com/jobs/project-manager-14840'>Project Manager - Tetra Tech Careers</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-28</p>
@@ -242,7 +253,7 @@
 <p><span class="badge badge-light">Washington, DC Washington, D.C.</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oC8Eafwi'>Santander Consumer USA Careers - Associate Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oC8Eafwi'>Santander Consumer USA Careers - Associate Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -254,7 +265,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/trussworks/ce4b111a-1819-48c1-9b56-f40c27c79929'>TrussWorks - Delivery Manager (Project Manager)</a></h5> 
+<h5><a href='https://jobs.lever.co/trussworks/ce4b111a-1819-48c1-9b56-f40c27c79929'>TrussWorks - Delivery Manager (Project Manager)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -335,7 +346,7 @@ Media Partners, LLC.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kmaconsultingllc/0705c1d0-096b-489b-a6f5-ce5a0619c2e3'>KMA Human Resources Consulting - Assistant Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/kmaconsultingllc/0705c1d0-096b-489b-a6f5-ce5a0619c2e3'>KMA Human Resources Consulting - Assistant Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -360,7 +371,7 @@ Media Partners, LLC.</p>
 <p>6 days ago ... TN-Nashville is now hiring a Project Manager/Business Analyst in Nashville, 
 Tennessee. Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/linkedin/job/o9XAafwA'>LinkedIn Careers - Program Manager, Media Operations (LMS)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/o9XAafwA'>LinkedIn Careers - Program Manager, Media Operations (LMS)</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -370,7 +381,7 @@ Tennessee. Review all of the job details and apply today!</p>
 tracking and reporting - Ensures effective and efficient meetings such as stand-
 ups,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/softcat/job/o7aBafwM'>Softcat Careers - Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/softcat/job/o7aBafwM'>Softcat Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Manchester London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -448,21 +459,11 @@ DUAL MASTER (M/F/D) PROJECT MANAGER in Bengaluru (published:?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/QGeYwVDsH8/NPI-Program-Manager'>NPI Program Manager - Bossanova Robotics - Career Page</a></h5> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/QGeYwVDsH8/NPI-Program-Manager'>NPI Program Manager - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://bossanovarobotics.applytojob.com/apply/wACnuvoIIA/Technical-Project-Manager'>Technical Project Manager - Bossanova Robotics - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://mainebhr.recruiterbox.com/jobs/fk031x4'>
-    Inspection Program Manager - 0748-2 at State of Maine
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/sr-project-manager-2683'>Sr Project Manager - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
